--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     
     <section id="about" class="content-section container mt-5 pt-5 ">
         <h1>About</h1>
-        <p>this web developed by Yasir Arafat. <br>In this web you can find best games of every years.</p>
+        <p>this web is developed by Yasir Arafat. <br>In this web you can find best games of every years.</p>
     </section>
     
     <section id="services" class="content-section container mt-5 pt-5">
