--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         width: fit-content;
         background-clip: text;
         color: transparent;
+        filter: brightness(100%);
     }
     </style>
 </head>
