--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         background-clip: text;
         color: transparent;
         filter: brightness(100%);
+        text-shadow: 0 0 15px blue,0 0 15px red;
     }
     </style>
 </head>
