--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </style>
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbarNav" data-bs-offset="70" tabindex="0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark glow-border-animated border-bottom border-info" style="z-index: 1020;position: sticky;top: 0;background: transparent;opacity: 0.9;">
+    <nav class="navbar navbar-expand-lg glow-border-animated navbar-dark bg-dark border-bottom border-info" style="z-index: 1020;position: sticky;top: 0;background: transparent;opacity: 0.9;">
         <div class="container">
             <a class="navbar-brand" href="#"><i class="bi bi-controller rotate-icon" style="font-size: 2rem;"></i>ZenoGemis</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
